# image-to-editable-pptx

./: .env.example  .gitignore  APPROACH.md  CURRENT_LEVEL2_AUDIT.md  EDGE_CASE_LOG.md  EDGE_CASE_LOG_LEVEL_2.md  ERROR_LOG.md  NEW_LEVEL2_ARCHITECTURE.md  NEW_LEVEL2_PLAN.md  PROJECT_MAP.md  README.md  SKIPPED_ELEMENTS_REPORT_GUIDE.md  SUMMARY.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: Dockerfile  README.md  pyproject.toml  test.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: documents.py  export.py  upload.py
backend/app/core/: config.py  constants.py  database.py  deps.py
backend/app/models/: document_layer.py  document_page.py  edit_history.py  project.py
backend/app/schemas/: diagram_graph.py  document.py  export.py  layer.py  layout.py  ocr.py  pipeline.py  project.py
backend/app/services/: azure_service.py  document_builder_service.py  document_service.py  export_service.py  gemini_service.py  layout_hierarchy_service.py  layout_service.py  level2_orchestrator.py  mock_layout_service.py  mock_ocr_service.py  ocr_service.py  pipeline_service.py  pptx_service.py  preprocessing_service.py  simple_level2_service.py  storage_service.py
backend/app/tests/: test_document.py  test_export.py  test_pipeline.py  test_stage1_5_reconstruction.py  test_stage1_75_consolidation.py  test_stage4_grouping.py  test_stage5_container.py  test_stage6_hierarchy.py  test_stage7_cleanup.py  test_upload.py
backend/app/utils/: coordinate_utils.py  image_utils.py
backend/app/workers/: tasks.py
backend/uploads/: demo1.avif
(+23 files in other folders)
