[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Image to PPTX conversion"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
aiosqlite = "^0.20.0"
python-pptx = "^0.6.21"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
opencv-python = "^4.13.0.92"
google-generativeai = "^0.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
